[tool.poetry]
name = "styx"
version = "0.1.0"
description = "Boutiques code generator"
authors = ["Florian Rupprecht <floruppr@gmail.com>"]
license = "LGPL-2.1"
readme = "README.md"
packages = [{include = "styx", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.4.4"
tomli = "^2.0.1"
styxdefs = "^0.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.1"
pre-commit = "^3.7.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.2"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.5.1"

[tool.poetry.extras]
docs = ["pdoc"]

[tool.poetry.scripts]
styx = "styx.main:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
preview = true
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "examples",
  "src/styx/boutiques/model.py"
]
line-length = 120
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = [
  "ANN101",  # self should not be annotated.
  "ANN102",  # cls should not be annotated.
  "D100",  # Missing docstring in public module.
  "D101",  # Missing docstring in public class.
  "D102",  # Missing docstring in public method.
  "D103",  # Missing docstring in public function.
  "D107"  # Missing docstring in __init__.
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
